src/main/java/org/example/scheduler/error/CustomException.java
package org.example.scheduler.error;

import lombok.Getter;

/**
 * 애플리케이션 전역에서 사용할 사용자 정의 예외 클래스
 */
@Getter
public class CustomException extends RuntimeException {
    private final ErrorCode errorCode;

    public CustomException(ErrorCode errorCode) {
        super(errorCode.getMessage());
        this.errorCode = errorCode;
    }

    public CustomException(ErrorCode errorCode, String customMessage) {
        super(customMessage);
        this.errorCode = errorCode;
    }
}

